--- a/Sunduk.PWA/Pages/OtherStuffPage.razor
+++ b/Sunduk.PWA/Pages/OtherStuffPage.razor
@@ -2,7 +2,7 @@
 
 
 <MudSwipeArea OnSwipe="@OnSwipe">
-    <MudTabs Elevation="2" Style="margin-top: -2vh" @ref="tabs">
+    <MudTabs Elevation="2" @ref="tabs">
         <MudTabPanel Text="Фаска">
             <ChamferComponent />
         </MudTabPanel>
