--- a/Sunduk.PWA/Shared/NavMenu.razor
+++ b/Sunduk.PWA/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿
 <MudNavMenu>
-    <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Домой</MudNavLink>
+    @*<MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Домой</MudNavLink>*@
     <MudNavLink Href="/calculator" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Calculate">Калькулятор режимов</MudNavLink>
     <MudNavLink Href="/nc" Match="NavLinkMatch.Prefix" Icon="fas fa-digital-tachograph">SunduCAM</MudNavLink>
     <MudNavLink Href="/thread" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LineWeight">Точение резьбы</MudNavLink>
