--- a/Sunduk.PWA/Pages/OtherStuffPage.razor
+++ b/Sunduk.PWA/Pages/OtherStuffPage.razor
@@ -1,8 +1,7 @@
 ﻿@page "/stuff"
 
-
 <MudSwipeArea OnSwipe="@OnSwipe">
-    <MudTabs Elevation="2" @ref="tabs">
+    <MudTabs Elevation="2" @ref="tabs" Style="font-size: small">
         <MudTabPanel Text="Фаска">
             <ChamferComponent />
         </MudTabPanel>
