--- a/Sunduk.PWA/Components/RadiusComponent.razor
+++ b/Sunduk.PWA/Components/RadiusComponent.razor
@@ -5,25 +5,27 @@
 </style>
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
     <MudGrid>
-        <MudItem xs="12" sm="4" md="4" lg="3" xl="3">
-            <MudField Label="Тип скругления" Variant="Variant.Outlined" InnerPadding="false">
-                <MudRadioGroup @bind-SelectedOption="@RadiusType">
-                    <MudRadio Option="@Radius.External" Color="Color.Primary" @onfocus="SetExternalType">Наружное</MudRadio>
-                    <MudRadio Option="@Radius.Internal" Color="Color.Primary" @onfocus="SetInternalType">Внутреннее</MudRadio>
-                </MudRadioGroup>
-            </MudField>
-        </MudItem>
-        <MudItem xs="6" sm="4" md="4" lg="5" xl="3">
-            <MudTextField @bind-Value="_RadiusDiameter" T="string" Label="Конечный диаметр" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"
-                          @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalPartDiameter : Images.InternalPartDiameter" />
-        </MudItem>
-        <MudItem xs="6" sm="4" md="4" lg="4" xl="3">
-            <MudTextField @bind-Value="_RadiusSize" T="string" Label="Радиус скругления" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"
-                          @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalRadiusSize : Images.InternalRadiusSize" />
-        </MudItem>
-        <MudItem xs="6" sm="4" md="4" lg="4" xl="3">
-            <MudTextField @bind-Value="_InsertRadius" T="string" Label="Радиус пластины" Variant="Variant.Text" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"
-                          @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalToolRadius : Images.InternalToolRadius" />
+        <MudItem xs="12" xl="12">
+            <MudGrid>
+                <MudItem xs="12" sm="4" md="4" lg="3" xl="3">
+                    <MudField Label="Тип скругления" Variant="Variant.Outlined" InnerPadding="false">
+                        <MudRadioGroup @bind-SelectedOption="@RadiusType">
+                            <MudRadio Option="@Radius.External" Color="Color.Primary" @onfocus="SetExternalType">Наружное</MudRadio>
+                            <MudRadio Option="@Radius.Internal" Color="Color.Primary" @onfocus="SetInternalType">Внутреннее</MudRadio>
+                        </MudRadioGroup>
+                    </MudField>
+                </MudItem>
+                <MudItem xs="6" sm="4" md="4" lg="5" xl="5">
+                    <MudTextField @bind-Value="_RadiusDiameter" T="string" Label="Конечный диаметр" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"
+                                  @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalPartDiameter : Images.InternalPartDiameter" />
+                    <MudTextField @bind-Value="_RadiusSize" T="string" Label="Радиус скругления" Variant="Variant.Text" Adornment="Adornment.End" AdornmentText="мм" Immediate="true"
+                                  @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalRadiusSize : Images.InternalRadiusSize" />
+                </MudItem>
+                <MudItem xs="6" sm="4" md="4" lg="4" xl="5">
+                    <MudTextField @bind-Value="_InsertRadius" T="string" Label="Радиус пластины" Variant="Variant.Text" Immediate="true" Adornment="Adornment.End" AdornmentText="мм"
+                                  @onfocus="() => CurrentImage = RadiusType == Radius.External ? Images.ExternalToolRadius : Images.InternalToolRadius" />
+                </MudItem>
+            </MudGrid>
         </MudItem>
 
         @if (RadiusDiameter > 0 && RadiusSize > 0)
