--- a/Sunduk.PWA/Pages/TimeCalc.razor
+++ b/Sunduk.PWA/Pages/TimeCalc.razor
@@ -1,7 +1,7 @@
 ﻿@page "/timecalc"
 
 <MudSwipeArea OnSwipe="@OnSwipe">
-    <MudTabs Elevation="2" Style="margin-top: -2vh" @ref="tabs">
+    <MudTabs Elevation="2" @ref="tabs">
         <MudTabPanel Text="Распиловка">
             <SawingTimeComponent/>
         </MudTabPanel>
