Revert "причесал перед отправкой в мастер"
This reverts commit 2c2b221bf9b639f330429fdfd321c54454922f31.

--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -14,7 +14,7 @@
             </MudLink>
         </MudItem>
 
-        @*<MudItem>
+        <MudItem>
             <MudLink Href="/nc" Underline="Underline.None">
                 <MudPaper Class="pa-6">
                     <MudGrid Justify="Justify.Center">
@@ -25,7 +25,7 @@
                     </MudGrid>
                 </MudPaper>
             </MudLink>
-        </MudItem>*@
+        </MudItem>
 
         <MudItem>
             <MudLink Href="/thread" Underline="Underline.None">
