--- a/Sunduk.PWA/Pages/Index.razor
+++ b/Sunduk.PWA/Pages/Index.razor
@@ -1,82 +1,66 @@
 ﻿@page "/"
-<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-3">
-    <MudGrid Spacing="1" Class="pa-1">
-        <MudItem >
-            <MudLink Href="/calculator" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Calculate" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Калькулятор режимов</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
 
-        <MudItem>
-            <MudLink Href="/nc" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="fas fa-digital-tachograph" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">SunduCAM</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
-
-        <MudItem>
-            <MudLink Href="/thread" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.LineWeight" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Точение резьбы</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
-
-        <MudItem>
-            <MudLink Href="/stuff" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.RoundedCorner" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Всякая хрень</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
-
-        <MudItem>
-            <MudLink Href="/angle" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.SignalCellularNull" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Перевод углов</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
-
-        <MudItem>
-            <MudLink Href="/timecalc" Underline="Underline.None">
-                <MudPaper Class="pa-6">
-                    <MudGrid Justify="Justify.Center">
-                        <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
-                    </MudGrid>
-                    <MudGrid Justify="Justify.Center">
-                        <MudText Typo="Typo.body2" Class="mt-4">Расчеты времени</MudText>
-                    </MudGrid>
-                </MudPaper>
-            </MudLink>
-        </MudItem>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-2">
+    <MudGrid>
+        <MudLink Href="/calculator" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Calculate" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Калькулятор режимов</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
+        @*<MudLink Href="/nc" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="fas fa-digital-tachograph" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">SunduCAM</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>*@
+        <MudLink Href="/thread" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.LineWeight" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Точение резьбы</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
+        <MudLink Href="/stuff" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.RoundedCorner" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Всякая хрень</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
+        <MudLink Href="/angle" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.SignalCellularNull" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Перевод углов</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>
+        @*<MudLink Href="/timecalc" Underline="Underline.None">
+            <MudPaper Class="pa-8 ma-2">
+                <MudGrid Justify="Justify.Center">
+                    <MudIcon Size="Size.Large" Icon="@Icons.Material.Filled.Timer" />
+                </MudGrid>
+                <MudGrid Justify="Justify.Center">
+                    <MudText Typo="Typo.caption" Class="mt-4">Расчеты времени</MudText>
+                </MudGrid>
+            </MudPaper>
+        </MudLink>*@
     </MudGrid>
 </MudContainer>
